--- a/resources/assets/sass/components/button.scss
+++ b/resources/assets/sass/components/button.scss
@@ -14,11 +14,15 @@
 // Style guide: Components.Button
 .Button {
     display: inline-block;
-    padding: 0px 13px;
+    padding: 4px 20px;
     border-radius: map_get($button, border-radius) + px;
     border-width: map_get($button, border-width) + px;
     border: map_get($button, border-width) + px solid map_get($button, border-color);
     color: map_get($button, font-color);
+
+    .Button-fw {
+        width: 100%;
+    }
 
     &:active {
         box-shadow: map_get($button, box-shadow__active);
@@ -31,7 +35,7 @@
     .Button__content {
         line-height: map_get($button, line-height);
         font-size: map_get($button, font-size) + px;
-        font-weight: 200;
+        font-weight: map_get($button, font-weight);
     }
 }
 
@@ -51,6 +55,7 @@
 .Button--primary {
     background-color: map_get($primaryButton, background-color);
     color: map_get($primaryButton, font-color);
+    border-color: map_get($primaryButton, border-color);
 
     &:hover {
         background-color: map_get($primaryButton, background-color__hover);
