--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -26,16 +26,6 @@ body {
     color: #3C4857;
 }
 
-a {
-    color: #9c27b0;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #9c27b0;
-    text-decoration: underline;
-}
-
 p {
     color: #3C4857;
 }
@@ -164,6 +154,10 @@ h6,
 
 [class*="pricing-"] {
     padding: 30px 0 60px 0;
+}
+
+.btn[type='submit'] {
+    font-size: 16px;
 }
 
 
