--- a/resources/assets/sass/components/activity.scss
+++ b/resources/assets/sass/components/activity.scss
@@ -20,8 +20,7 @@
     }
 
     &__profile-image {
-        -webkit-flex: 1 0 0;
-        flex: 1 0 0;
+        margin-right: 10px;
 
         img {
             width: map_get($userActivityProfileImage, width) + px;
