--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -99,9 +99,11 @@
     }
 
     &__head {
+        position: relative;
         border-radius: 2px 2px 0 0;
         padding: 10px;
         background-color: $mainColor;
+
 
         &__wrapper {
             display: flex;
@@ -111,10 +113,30 @@
         &__notify {
             background-color: #b53d22;
         }
+
+        &__onlineBar {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            width: 3px;
+            background-color: #33e23c;
+        }
     }
 
     &__user {
+        position: relative;
         display: flex;
+
+        &__onlineCircle {
+            position: absolute;
+            background-color: #33e23c;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            right: -16px;
+            bottom: 8px;
+        }
     }
 
     &__profile-image,
