--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -146,11 +146,17 @@
         color: $white;
     }
 
-    &__profile-image {
-        margin-right: 10px;
-        border-radius: 50%;
+    &__profilePicture__wrapper {
+        @include roundImageWrapper;
+
+        margin-right: 7px;
+
         width: 27px;
         height: 27px;
+    }
+
+    &__profilePicture {
+        @include roundImage;
     }
 
     &__username {
