--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -18,18 +18,27 @@
         }
     }
 
-    &__profileImage {
-        position: relative;
+    .modalImage {
+        display: inline-block;
+        width: 50%;
+        vertical-align: top;
     }
 
     &__profileImage {
-        //position: absolute;
-        //left: 50%;
-        //top: 50%;
-        //height: 100%;
-        //width: auto;
-        //-webkit-transform: translate(-50%, -50%);
-        //transform: translate(-50%, -50%)
+        position: relative;
+        vertical-align: top;
+    }
+
+    &__nonProfileImageWrapper {
+        display: inline-block;
+        vertical-align: top;
+        overflow: hidden;
+        width: 100%;
+        height: 127px;
+    }
+
+    &__nonProfileImage {
+        width: 100%;
     }
 
     &__user-image {
@@ -46,7 +55,7 @@
         }
     }
 
-    &__footer {
+    &__footer__upperPart {
         position: relative;
         display: flex;
         flex-direction: row;
@@ -80,8 +89,13 @@
         }
     }
 
+    &__otherImages {
+
+    }
+
     &__userInfo {
         text-align: center;
+
         a {
             text-decoration: none;
             color: #555;
