--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -18,7 +18,7 @@
         }
     }
 
-    .modalImage {
+    &__nonProfileImageModalWrapper {
         display: inline-block;
         width: 50%;
         vertical-align: top;
