--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -271,3 +271,13 @@
         box-shadow: none;
     }
 }
+
+.navbar {
+    .container {
+        position: relative;
+    }
+
+    .searchToggle {
+        position: relative;
+    }
+}
