--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -62,11 +62,16 @@
         &__deleteIcon {
             display: none !important;
             position: absolute;
-            top: 10px;
+            top: 14px;
             right: 10px;
             background-color: #fff;
             border-radius: 50%;
             color: #ff5b49;
+
+            @media (max-width: $screen-sm-max) {
+                display: inline-block !important;
+                border: 1px solid #ddd;
+            }
 
             &:hover {
                 box-shadow: 0 0 4px rgba(0,0,0,0.2);
@@ -179,6 +184,10 @@
             text-align: right;
             font-size: 12px;
             line-height: 24px;
+
+            @media (max-width: $screen-sm-max) {
+                padding-right: 28px;
+            }
         }
 
         &__lastMessage {
