--- a/resources/assets/sass/components/user-profile.scss
+++ b/resources/assets/sass/components/user-profile.scss
@@ -5,7 +5,7 @@
 // The user profile component displays all the information of a user
 //
 // Style guide: Components.User Profile
-.User-profile {
+.User-profile__info {
     &__body {
         hr {
             margin-top: 10px;
@@ -18,6 +18,25 @@
         h5 {
             color: map_get($userProfileItem, icon-color);
         }
+
+        table {
+            tbody {
+                tr:first-of-type {
+                    td {
+                        border-top: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    &__title {
+        font-weight: 500;
+        color: #444;
+    }
+
+    &__value {
+        font-style: italic;
     }
 
     &__favorite-button {
@@ -28,5 +47,37 @@
 
     &__text {
         font-size: map_get($userProfileItem, font-size) + px;
+    }
+}
+
+.User-profile__about {
+    blockquote {
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        border: 0;
+        quotes: "\201C""\201D""\2018""\2019";
+    }
+    blockquote:before {
+        color: lighten($secondaryColor, 5%);
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.15em;
+        vertical-align: -0.4em;
+    }
+    blockquote:after {
+        color: lighten($secondaryColor, 5%);
+        content: close-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-left: 0.15em;
+        vertical-align: -0.6em;
+    }
+    blockquote p {
+        display: inline;
+        font-style: italic;
+        font-size: 19px;
+        color: #777;
+        font-weight: 400;
     }
 }
