--- a/resources/assets/sass/scaffolding.scss
+++ b/resources/assets/sass/scaffolding.scss
@@ -16,6 +16,10 @@ body {
     }
 }
 
+.form-control {
+    font-size: 17px;
+}
+
 // set custom scrollbars
 ::-webkit-scrollbar {
     background-color: #fff;
