language selection in navbar and backend

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,23 +1,7 @@
 // Variables
 @import "variables";
 
-@mixin roundImageWrapper {
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-  border-radius: 50%;
-}
-
-@mixin roundImage {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  height: 100%;
-  width: auto;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-}
+@import "mixins";
 
 @import "brand";
 
