--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -14,7 +14,7 @@
     bottom: 0;
     width: map_get($privateChatItem, width) + px;
 
-    .notEnoughCredits {
+    &__feedback {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -25,13 +25,26 @@
         justify-content: center;
         align-items: center;
         background-color: rgba(0, 0, 0, 0.6);
-        color: #fff;
-        font-size: 27px;
-        font-weight: 500;
         z-index: 400;
+        padding: 20px;
 
-        a {
+        &--notEnoughCredits {
+            color: #fff;
+            font-size: 27px;
+            font-weight: 500;
+            text-align: center;
+
+            a {
+                text-align: center;
+                color: $secondaryColor;
+            }
+        }
+
+        &--error {
             color: $secondaryColor;
+            font-size: 27px;
+            font-weight: 500;
+            text-align: center;
         }
     }
 
