payment checks based on targetpay exceptions and change of main colour

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -33,9 +33,9 @@ $squashLight: #f7b54e;
 $yellowLight: #f9ce89;
 
 // brand colors
-$mainColor: $slate;
+$mainColor: $dark;
 $secondaryColor: $tomato;
-$tertiaryColor: $dark;
+$tertiaryColor: $slate;
 $textColor: $black;
 
 // layout colors
@@ -63,7 +63,7 @@ $fontSize: (
 // ---------------- Components & Modules ---------------
 // Navbar
 $navbarLinkColor: $sugar;
-$navbarBgColor: $slate;
+$navbarBgColor: $dark;
 
 $navbarHeight: 70;
 $navbarBorderWidth: 1;
