--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -265,6 +265,9 @@
         margin-bottom: 10px;
         word-break: break-all;
         width: 75%;
+        font-size: 15px;
+        letter-spacing: 0.2px;
+        line-height: 18px;
 
         &__container {
             &--user-a {
@@ -307,6 +310,10 @@
         width: 95%;
         overflow: hidden;
         resize: none;
+        font-size: 15px;
+        letter-spacing: 0.3px;
+        line-height: 18px;
+        padding-right: 40px;
 
         &:focus {
             outline: 0;
