--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -115,7 +115,7 @@
         position: relative;
         border-radius: 2px 2px 0 0;
         padding: 10px;
-        background-color: $mainColor;
+        background-color: $tertiaryColor;
 
 
         &__wrapper {
