--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -206,9 +206,9 @@ $button: (
         'border-radius': 2,
         'border-width': 1,
         'border-color': #ccc,
-        'font-size': 14,
-        'font-weight': 400,
-        'line-height': 1.5,
+        'font-size': 1.8,
+        'font-weight': 500,
+        'line-height': 15,
         'box-shadow__active': inset 0 1px 3px 0 rgba(0, 0, 0, 0.25)
 );
 
@@ -221,10 +221,10 @@ $defaultButton: (
 );
 
 $primaryButton: (
-        'background-color': darken($slate, 10%),
-        'border-color': $slate,
-        'background-color__hover': $slate,
-        'background-color__active': $slate
+        'background-color': $tertiaryColor,
+        'border-color': $tertiaryColor,
+        'background-color__hover': lighten($tertiaryColor, 6%),
+        'background-color__active': darken($tertiaryColor, 6%)
 );
 
 $successButton: (
@@ -246,9 +246,9 @@ $warningButton: (
 );
 
 $dangerButton: (
-        'background-color': $tomato,
-        'background-color__hover': $tomatoLight,
-        'background-color__active': $tomato
+        'background-color': $secondaryColor,
+        'background-color__hover': lighten($secondaryColor, 6%),
+        'background-color__active': darken($secondaryColor, 6%)
 );
 
 // Search
@@ -270,7 +270,7 @@ $privateChatItem: (
 );
 
 $privateChatManager: (
-        'headBackGroundColor': $mainColor,
+        'headBackGroundColor': $tertiaryColor,
         'headColor': $sugar,
         'headHeight': 50,
         'headHeightMobileMaximized': 70
