--- a/resources/assets/sass/mixins.scss
+++ b/resources/assets/sass/mixins.scss
@@ -6,12 +6,15 @@
 }
 
 @mixin roundImage {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    height: 130%;
-    width: auto;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    height: auto;
+    width: 100%;
+
+    &.fitVertically {
+        height: 100%;
+        width: auto;
+
+        &.flagImage {
+            width: 100%;
+        }
+    }
 }
