--- a/resources/assets/sass/views/credits.scss
+++ b/resources/assets/sass/views/credits.scss
@@ -100,6 +100,7 @@ Table of Contents End
         color: rgba(0, 0, 0, 0.87);
         background: #fff;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        cursor: pointer;
     }
 
     .block-caption {
@@ -111,6 +112,23 @@ Table of Contents End
     .block-plain {
         background: transparent;
         box-shadow: none;
+    }
+
+    .paymentMethodsLabel {
+        display: block;
+        width: 100%;
+        padding-right: 200px;
+        z-index: 20;
+    }
+
+    .paymentMethodsList {
+        position: relative;
+    }
+
+    .paymentMethodLogo {
+        position: absolute;
+        right: 15px;
+        top: 13px;
     }
 
     .block .category:not([class*="text-"]) {
