--- a/resources/assets/sass/mixins.scss
+++ b/resources/assets/sass/mixins.scss
@@ -1,20 +1,7 @@
-@mixin roundImageWrapper {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
 @mixin roundImage {
-    height: auto;
-    width: 100%;
-
-    &.fitVertically {
-        height: 100%;
-        width: auto;
-
-        &.flagImage {
-            width: 100%;
-        }
-    }
+    width: 11rem;
+    height: 11rem;
+    border-radius: 50%;
+    object-fit: cover;
+    transform: translateY(-0.5rem);
 }
