account deactivation and email

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -216,7 +216,7 @@ $defaultButton: (
         'background-color': $white,
         'border-color': $white,
         'font-color': #555,
-        'background-color__hover': $lightGrey,
+        'background-color__hover': #f7f6f6,
         'background-color__active': $lightGrey
 );
 
