--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -183,6 +183,7 @@
 
         max-width: 175px;
         overflow: hidden;
+        white-space: nowrap;
         text-overflow: ellipsis;
 
         &Anchor {
