--- a/resources/assets/sass/components/private-chat-manager.scss
+++ b/resources/assets/sass/components/private-chat-manager.scss
@@ -62,7 +62,7 @@
         &__deleteIcon {
             display: none !important;
             position: absolute;
-            top: 23px;
+            top: 27px;
             right: 36px;
             background-color: #fff;
             border-radius: 50%;
@@ -88,7 +88,7 @@
             display: none !important;
             position: absolute;
             right: 10px;
-            bottom: 8px;
+            bottom: 5px;
             font-size: 20px !important;
             color: #ff5b49;
         }
@@ -128,7 +128,7 @@
 
             position: absolute;
             left: 2px;
-            top: 7px;
+            top: 13px;
             width: 40px;
             height: 40px;
 
@@ -162,6 +162,7 @@
             flex: 5;
 
             margin-right: 15px;
+            padding: 5px 0;
 
             &__topPart {
                 display: flex;
