fix image resizing when view width changes, improve chat styles

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -271,7 +271,7 @@ $privateChatItem: (
 
 $privateChatManager: (
         'headBackGroundColor': $tertiaryColor,
-        'headColor': $sugar,
+        'headColor': $white,
         'headHeight': 50,
         'headHeightMobileMaximized': 70
 );
